[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-pr-scanner"
version = "0.1.0"
description = "Multi-chain wallet balance scanner with Rich UI"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.3",
  "rich==13.9.2",
  "PyYAML==6.0.2",
  "pyperclip==1.9.0",
  "typer==0.12.5",
  "click==8.1.7",
]

[project.scripts]
crypto-pr = "scanner.cli:app"
